cabal-version:      >=1.10
name:               reflex-fsnotify
version:            0.3.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2020 Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
author:             Obsidian Systems LLC
tested-with:
    ghc ==8.10.7 || ==8.8.4 || ==8.6.5 || ==9.0.1 || ==9.2.5 || ==9.4.5 || ==9.6.1 || ==9.8.2 || ==9.10.1

bug-reports:        https://github.com/reflex-frp/reflex-fsnotify/issues
synopsis:           Reflex FRP interface for watching files
description:
    Watch files and directories for changes using a functional-reactive interface!
    .
    <https://reflex-frp.org/>

category:           System, FRP
build-type:         Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
    type:     git
    location: https://github.com/reflex-frp/reflex-fsnotify

library
    exposed-modules:  Reflex.FSNotify
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.10 && <4.21,
        containers >=0.6 && <0.8,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        fsnotify >=0.4 && <0.5,
        reflex >=0.5 && <1
